<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort">
        <menu>
            <item
                android:id="@+id/menu_sort_register"
                android:title="@string/menu_sort_register"/>
            <item
                android:id="@+id/menu_sort_date"
                android:title="@string/menu_sort_date"/>
        </menu>

    </item>
    <item
        android:id="@+id/menu_delete_done"
        android:title="@string/menu_delete_done"
        />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />


</menu>